# FastAPI-PostgreSQL-Docker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  helpers.py  main.py  models.py  schemas.py
app/config_data/: config.py
postgresql/: Dockerfile
