[tool.poetry]
name = "quiz"
version = "0.1.0"
description = ""
authors = ["Yuhen Liubimov <yauhenliubimau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.21"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"
types-requests = "^2.31.0.8"
asyncpg = "^0.28.0"
environs = "^9.5.0"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
mypy = "^1.6.0"
isort = "^5.12.0"

[tool.mypy]
cache_dir = ".venv/mypy/"
exclude = [
    ".idea",
    ".vscode",
    ".venv",
    "database"
]
pretty = true
python_version = "3.10"

[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.venv.* |
    .*\.idea.* |
    .*\.vscode.* |
    .*\database.*
)
'''


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".venv",
    "database"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
